[gd_scene load_steps=8 format=3 uid="uid://l0wj5e7alp6f"]

[ext_resource type="Script" path="res://Robert_Hater.gd" id="1_bsygs"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_qycky"]

[sub_resource type="Skin" id="Skin_17wnk"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_pqi76"]
albedo_color = Color(1, 0, 0, 1)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_vcfwm"]
radius = 0.741485
height = 2.36665

[sub_resource type="CylinderShape3D" id="CylinderShape3D_xqjxm"]
height = 126.025
radius = 276.74

[sub_resource type="SphereShape3D" id="SphereShape3D_1i16t"]
radius = 1.00905

[node name="Robert_Hater" type="CharacterBody3D" groups=["enemy"]]
script = ExtResource("1_bsygs")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_qycky")
skin = SubResource("Skin_17wnk")
surface_material_override/0 = SubResource("StandardMaterial3D_pqi76")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_vcfwm")

[node name="Attack_Range" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Attack_Range"]
shape = SubResource("CylinderShape3D_xqjxm")

[node name="Attack_Area" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Attack_Area"]
shape = SubResource("CapsuleShape3D_vcfwm")

[node name="Damage_Area" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Damage_Area"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.98572, 0)
shape = SubResource("SphereShape3D_1i16t")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
